# migration-sandbox

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/requirements/: phase1.md
src/migration_sandbox/core/: contact_dto.py  contact_normalizer.py
src/migration_sandbox/utils/: file_reader.py
tests/: conftest.py
tests/unit/core/: test_contact_dto.py  test_contact_normalizer.py
tests/unit/utils/: test_file_reader.py
